# src/app/controllers/index.js
@@ -1,7 +1,11 @@
 const createJobLoadLampiranPut02 = require('./lamp02/createJobLoadLampiranPut02');
 const getJobLoadLampiranPut02 = require('./lamp02/getJobLoadLampiranPut02');
+const createJobLoadLampiranPut03 = require('./lamp03/createJobLoadLampiranPut03');
+const getJobLoadLampiranPut03 = require('./lamp03/getJobLoadLampiranPut03');
 
 module.exports = {
   createJobLoadLampiranPut02,
   getJobLoadLampiranPut02,
+  createJobLoadLampiranPut03,
+  getJobLoadLampiranPut03,
 };
