# src/app/controllers/lamp03/getJobLoadLampiranPut03.js
@@ -1,20 +1,19 @@
 const _ = require('lodash');
-const { LoadPut02Queue } = require('../Queue');
+const { LoadPut03Queue } = require('../Queue');
 const db = require('../../db');
 
 module.exports = async function getRoot(req, res) {
   const { npwp } = req.params;
   const sptId = req.params.spt_id;
-  const job = await LoadPut02Queue.getJob(`${npwp}:${sptId}`);
+  const job = await LoadPut03Queue.getJob(`${npwp}:${sptId}`);
   const spt = await db('SPT_1107PUT').where('ID', sptId).where('NPWP', npwp).first();
-
   if (job) {
     const status = await job.getState();
     return res.xsend(
       'Berhasil mengambil data job',
       {
         job: Object.assign(job, { status }),
-        db: _.pick(spt, ['WPUT02_STATUS', 'WPUT02_TIMESTAMP']),
+        db: _.pick(spt, ['WPUT03_STATUS', 'WPUT03_TIMESTAMP']),
       },
       { code: 'JOB_FOUND' }
     );
@@ -22,7 +21,7 @@ module.exports = async function getRoot(req, res) {
 
   return res.xsend(
     'Job tidak ditemukan',
-    { job, db: _.pick(spt, ['WPUT02_STATUS', 'WPUT02_TIMESTAMP']) },
+    { job, db: _.pick(spt, ['WPUT03_STATUS', 'WPUT03_TIMESTAMP']) },
     { code: 'JOB_NOT_FOUND' }
   );
 };
