# src/app/swagger.json
@@ -91,6 +91,87 @@
         },
         "deprecated": false
       }
+    },
+    "/worker/load1107put03/{npwp}/{spt_id}": {
+      "get": {
+        "tags": [
+          "Worker"
+        ],
+        "summary": "root folder",
+        "description": "",
+        "operationId": "getJobLoadLampiranPut03",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "npwp",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "spt_id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DataResponse"
+                }
+              }
+            }
+          }
+        },
+        "deprecated": false
+      }
+      ,
+      "post": {
+        "tags": [
+          "Worker"
+        ],
+        "summary": "root folder",
+        "description": "",
+        "operationId": "createJobLoadLampiranPut03",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "npwp",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "spt_id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DataResponse"
+                }
+              }
+            }
+          }
+        },
+        "deprecated": false
+      }
     }
   },
   "components": {
